--- a/hw6.ipynb
+++ b/hw6.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:561f4926da60ebaf20d83b7553b8fb415ee8c65f0f4883dfb235096b172dd35c"
+  "signature": "sha256:f4035866b52fd9a28839c5258e7a267756cb31634ddd870c2f0cb081b0b693cb"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -39,6 +39,26 @@
      ]
     },
     {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "ans.add(False)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 2,
+       "text": [
+        "False"
+       ]
+      }
+     ],
+     "prompt_number": 2
+    },
+    {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
@@ -47,6 +67,26 @@
       "* Rafael.\n",
       "* Roberta."
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "ans.add('Rafael')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 3,
+       "text": [
+        "'Rafael'"
+       ]
+      }
+     ],
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
@@ -61,6 +101,31 @@
      ]
     },
     {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "r  = 0.2\n",
+      "P0 = 45\n",
+      "D1 = 3\n",
+      "P1 = (1+r)*P0 - D1 # P0 = D1/(1+r) + P1/(1+r)\n",
+      "\n",
+      "ans.add(fi.rnd(P1))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 4,
+       "text": [
+        "51"
+       ]
+      }
+     ],
+     "prompt_number": 4
+    },
+    {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
@@ -73,12 +138,61 @@
      ]
     },
     {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "P0 = 42\n",
+      "r  = 0.16\n",
+      "D1 = 0.0625 * P0\n",
+      "P1 = (1+r)*P0 - D1\n",
+      "\n",
+      "ans.add(fi.rnd(P1))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 5,
+       "text": [
+        "46"
+       ]
+      }
+     ],
+     "prompt_number": 5
+    },
+    {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
       "### Question 5\n",
       "(10 points) Electricity for All (EFL) is preparing for their Initial Public Equity Offering (IPO). Being in a highly regulated industry, and with no plans for expanding, EFL plans to payout all of its earnings as dividends that are expected to the be same. If the expected rate of return on its equity is 12% and a fair IPO price is \\$85 per share, what is EFL's dividend per share? (Enter just the number without the $ sign or a comma; round off decimals.)"
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "r = 0.12\n",
+      "P = 85\n",
+      "D = P * r\n",
+      "\n",
+      "ans.add(fi.rnd(D))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 6,
+       "text": [
+        "10"
+       ]
+      }
+     ],
+     "prompt_number": 6
     },
     {
      "cell_type": "markdown",
@@ -91,12 +205,59 @@
      ]
     },
     {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "ans.add(False)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 7,
+       "text": [
+        "False"
+       ]
+      }
+     ],
+     "prompt_number": 7
+    },
+    {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
       "###Question 7\n",
       "(15 points) You are deciding whether to add Bard Publishing to your portfolio, but you are concerned about your projection for their growth rate. Bard's cost of equity capital (the discount rate for equity) is known to be 14% and they just paid a dividend of \\$2 per share. When calculating the value of the stock today, you cannot decide if the constant growth rate will be 6% or 7%. By how much does this seemingly small difference impact your valuation, i.e., the price per share? (Enter just the number without the \\$ sign or a comma; round off decimals.) "
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "r  = 0.14\n",
+      "g1 = 0.06\n",
+      "g2 = 0.07\n",
+      "p1 = 2*(1+g1)/(r-g1)\n",
+      "p2 = 2*(1+g2)/(r-g2)\n",
+      "diff = p2-p1\n",
+      "\n",
+      "ans.add(fi.rnd(diff))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 8,
+       "text": [
+        "4"
+       ]
+      }
+     ],
+     "prompt_number": 8
     },
     {
      "cell_type": "markdown",
@@ -107,12 +268,87 @@
      ]
     },
     {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "r  = 0.09\n",
+      "P0 = 31\n",
+      "D2 = 2\n",
+      "# P1 = D2/(r-g); P0 = P1/(1+r) = D2/[(r-g)(1+r)]; g = r - D2/[P0(1+r)]\n",
+      "g = r - D2/(P0*(1+r))\n",
+      "assert round(-P0 + fi.disc(D2/(r-g),1,r)) == float(0), \"Incorrect g\"\n",
+      "ans.add(round(100*g,2))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 9,
+       "text": [
+        "3.08"
+       ]
+      }
+     ],
+     "prompt_number": 9
+    },
+    {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
       "###Question 9\n",
       "(15 points) Viento Windmills is a utility that charges customers for their wind generated electricity. With their current technology, they earn a total of \\$50 million each year to pay out to their 2 million shareholders. While their geographic footprint is fixed and we can't expect the climate to get progressively windier over time, they do have an opportunity to invest in technology that will more efficiently extract the wind energy and thus produce more megawatts to sell to customers. A one-time investment at the end of this year (t = 1) of \\$25 million for a state of the art lubricant system for the windmills will increase their cash flows by \\$10 million per year starting the following year (t = 2) and in perpetuity. If Viento plans to make the investment and cost of equity capital (the discount rate for equity) is 9%, calculate the increase or decrease in the share price of Viento as a result of this decision. (Draw time line to understand what is going on.) (Enter just the number without the \\$ sign or a comma; round off decimals.) \n"
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "r          = 0.09                 # 9% discount rate\n",
+      "shares     = 2e6                  # 2 million shares outstanding\n",
+      "invest     = 25e6                 # $25 million investment\n",
+      "earn_inc   = 10e6                 # $10 milliion addional earning\n",
+      "\n",
+      "##\n",
+      "# Approach I: Compute the orignal and new market cap's and subtract\n",
+      "##\n",
+      "\n",
+      "# Without new lubricant technology\n",
+      "earn_old    = 50e6            # $50 million earnins \n",
+      "mktcap_old  = earn_old/r      # Current market-cap \n",
+      "\n",
+      "# With new lubricant technology\n",
+      "earn_new   = earn_old + earn_inc  # New higher earnings\n",
+      "D1         = earn_old - invest\n",
+      "P1         = earn_new/r\n",
+      "mktcap_new = fi.disc(D1 + P1, 1, r)\n",
+      "\n",
+      "price_chg_1 = (mktcap_new - mktcap_old)/shares\n",
+      "\n",
+      "##\n",
+      "# Approach II: Compute the PV of the cost + increase earnings\n",
+      "##\n",
+      "\n",
+      "price_chg_2 = fi.disc(-invest + earn_inc/r, 1, r)/shares\n",
+      "\n",
+      "assert round(price_chg_1) == round(price_chg_2), \"Approaches don't agree\"\n",
+      "\n",
+      "ans.add(fi.rnd(price_chg_2))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 10,
+       "text": [
+        "40"
+       ]
+      }
+     ],
+     "prompt_number": 10
     },
     {
      "cell_type": "markdown",
@@ -131,12 +367,61 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "ans.display()"
+      "P_Old = 100.0   # $100 share price\n",
+      "D     = 10      # $10 dividend per share\n",
+      "r     = D/P_Old # Discount rate\n",
+      "g     = 0.05\n",
+      "P_New = D/(2*(r-g))\n",
+      "P_Chg = P_New - P_Old\n",
+      "\n",
+      "if fi.rnd(P_Chg) == 0:\n",
+      "    ans.add('Price will remain unchanged.')\n",
+      "elif P_Chg > 0:\n",
+      "    ans.add('Price will increase by $%d per share.'%fi.rnd(P_Chg))\n",
+      "else:\n",
+      "    ans.add('Price will decrease by $%d per share.'%fi.rnd(P_Chg))"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 11
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "ans.display()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 1. False\n",
+        " 2. Rafael\n",
+        " 3. 51\n",
+        " 4. 46\n",
+        " 5. 10\n",
+        " 6. False\n",
+        " 7. 4\n",
+        " 8. 3.08\n",
+        " 9. 40\n",
+        "10. Price will remain unchanged.\n"
+       ]
+      }
+     ],
+     "prompt_number": 12
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 12
     }
    ],
    "metadata": {}
