--- a/hw6.ipynb
+++ b/hw6.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:40ddf50b79e496a4332464575e6e12aaad8e433f0bcfdcf4de3c2c3a595b7ae6"
+  "signature": "sha256:f25b026eb28d51b6448a66a9bdbee17d90dce26653e27c0a7ee53ea6923ceb44"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -375,16 +375,27 @@
       "P_New = D/(2*(r-g))\n",
       "P_Chg = P_New - P_Old\n",
       "\n",
-      "if fi.rnd(P_Chg) == 0:\n",
-      "    ans.add('Price will remain unchanged.')\n",
+      "if round(P_Chg, 2) == 0:\n",
+      "    a = 'Price will remain unchanged.'\n",
       "elif P_Chg > 0:\n",
-      "    ans.add('Price will increase by $%d per share.'%fi.rnd(P_Chg))\n",
+      "    a = 'Price will increase by $%d per share.' % fi.rnd(P_Chg)\n",
       "else:\n",
-      "    ans.add('Price will decrease by $%d per share.'%fi.rnd(P_Chg))"
+      "    a = 'Price will decrease by $%d per share.' % fi.rnd(P_Chg)\n",
+      "\n",
+      "ans.add(a)"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 11,
+       "text": [
+        "'Price will remain unchanged.'"
+       ]
+      }
+     ],
      "prompt_number": 11
     },
     {
