--- a/hw6.ipynb
+++ b/hw6.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:f25b026eb28d51b6448a66a9bdbee17d90dce26653e27c0a7ee53ea6923ceb44"
+  "signature": "sha256:8dceaefb072d37ff9461e7bf23ae64d763f7f186a840ba52d2fb2a355e66f236"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -315,11 +315,11 @@
       "# Approach I: Compute the orignal and new market cap's and subtract\n",
       "##\n",
       "\n",
-      "# Without new lubricant technology\n",
+      "# Without new technology\n",
       "earn_old    = 50e6            # $50 million earnins \n",
       "mktcap_old  = earn_old/r      # Current market-cap \n",
       "\n",
-      "# With new lubricant technology\n",
+      "# With new technology\n",
       "earn_new   = earn_old + earn_inc  # New higher earnings\n",
       "D1         = earn_old - invest\n",
       "P1         = earn_new/r\n",
