--- a/hw7.ipynb
+++ b/hw7.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:cc0985a6bc7ec6de009f8952cb5671bdd2cca8f325b19e8e1907a7710465d57a"
+  "signature": "sha256:464c1cd5888a8c905f37af7c1639997f426b46341523f5aaaab1e77b168214d8"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -337,6 +337,39 @@
      "prompt_number": 11
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "### Extra Question (5)\n",
+      "(10 points) We often want to find investments that perform well\n",
+      "when other parts of our portfolio are struggling. When considering stocks to\n",
+      "add to the portfolio, those with a correlation closer to zero with our\n",
+      "existing portfolio will most effectively help us diversify. \n",
+      "* True. \n",
+      "* False."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "ans.add('Missing')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 12,
+       "text": [
+        "'Missing'"
+       ]
+      }
+     ],
+     "prompt_number": 12
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
@@ -358,11 +391,12 @@
         " 7. Missing\n",
         " 8. Missing\n",
         " 9. Missing\n",
-        "10. Missing\n"
+        "10. Missing\n",
+        "11. Missing\n"
        ]
       }
      ],
-     "prompt_number": 12
+     "prompt_number": 13
     }
    ],
    "metadata": {}
