--- a/hw8.ipynb
+++ b/hw8.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:592acdabf827a356fa5118441b0df430e66f7127f6c90627a045487e85eb80e6"
+  "signature": "sha256:cf9d0262de1d041385f1626ca08fb8916817ca42f29935590f32a60150d026fb"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -330,6 +330,144 @@
      "prompt_number": 11
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "### Extra Question (1)\n",
+      "(5 points) By simply increasing the number of assets (e.g.,\n",
+      "assets > 30) in any portfolio, you can diversify your exposure to\n",
+      "specific/idiosyncratic risk. \n",
+      "* True. \n",
+      "* False."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "ans.add('Missing')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 12,
+       "text": [
+        "'Missing'"
+       ]
+      }
+     ],
+     "prompt_number": 12
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "### Extra Question (3)\n",
+      "(10 points) You have a portfolio that consists of equity\n",
+      "ownership in three firms. You own 400 shares of Stout Drink Company (SDC),\n",
+      "300 shares of Carbon Computing (CC) and 300 shares of Serrano Foods\n",
+      "(SF). Their current share prices are \\$82, \\$46, and \\$124, respectively. What\n",
+      "is the weight of SF in your portfolio? (Enter the answer with no more nor\n",
+      "less than two decimal places, and leave off the % sign. For example, if your\n",
+      "answer is 13.97% you should enter it as 13.97 NOT 0.14 nor 14)"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "ans.add('Missing')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 13,
+       "text": [
+        "'Missing'"
+       ]
+      }
+     ],
+     "prompt_number": 13
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "### Extra Question (6) \n",
+      "(10 points) The FTSE 100 is an index of the 100 largest market\n",
+      "capitalization stocks traded on the London Stock Exchange. You think that\n",
+      "100 stocks are too much to keep up with, so you want to drop that number to 50. By doing this, what is the percentage drop in the UNIQUE relations\n",
+      "between any two stocks in your portfolio that you will have to worry about?\n",
+      "(Enter the answer with no more nor less than two decimal places, and leave\n",
+      "off the % sign. For example, if your answer is 13.97% you should enter it as\n",
+      "13.97 NOT 0.14 nor 14)"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "ans.add('Missing')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 14,
+       "text": [
+        "'Missing'"
+       ]
+      }
+     ],
+     "prompt_number": 14
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "### Extra Question (10)\n",
+      "(15 Points) Your own company has been very successful in\n",
+      "producing and selling rocket engines. Given that airplane engines are not\n",
+      "that cheap, and the airline industry is extremely sensitive to the market,\n",
+      "the beta of your company is 2.50. The market risk premium (the\n",
+      "average/expected difference between the market return and the risk-free\n",
+      "rate) is 4.00% and the return on a long-term government bond is 2.50%. You\n",
+      "have discovered an exciting opportunity to create a new wireless device that\n",
+      "will cover a whole state in the U.S. with one station. This project will\n",
+      "require a \\$4 billion investment, spread out equally between now (t = 0) and\n",
+      "the end of this year (t = 1), and will produce \\$500 million dollars in\n",
+      "perpetuity starting in year 2 (t = 2). Should you proceed with this project?"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "ans.add('Missing')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 15,
+       "text": [
+        "'Missing'"
+       ]
+      }
+     ],
+     "prompt_number": 15
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
@@ -351,11 +489,15 @@
         " 7. Missing\n",
         " 8. Missing\n",
         " 9. Missing\n",
-        "10. Missing\n"
+        "10. Missing\n",
+        "11. Missing\n",
+        "12. Missing\n",
+        "13. Missing\n",
+        "14. Missing\n"
        ]
       }
      ],
-     "prompt_number": 12
+     "prompt_number": 16
     }
    ],
    "metadata": {}
