--- a/hw7.ipynb
+++ b/hw7.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:464c1cd5888a8c905f37af7c1639997f426b46341523f5aaaab1e77b168214d8"
+  "signature": "sha256:fffacc06d968778b6b1e5ce0e89b8ec8ee9fa180095e4436e702f030ae4e00a2"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -42,7 +42,8 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "ans.add('Missing')"
+      "# Economic slowdown impacts many companies across sectors, hence this would be classified as a Systemic Risk.\n",
+      "ans.add('Systematic/Market Risk.')"
      ],
      "language": "python",
      "metadata": {},
@@ -52,7 +53,7 @@
        "output_type": "pyout",
        "prompt_number": 2,
        "text": [
-        "'Missing'"
+        "'Systematic/Market Risk.'"
        ]
       }
      ],
@@ -73,17 +74,45 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "ans.add('Missing')"
+      "# States:  Expansion,  Normal, Recession\n",
+      "p = [            0.3,    0.35,      0.35]  # State Probabilites \n",
+      "y = [           25.0,    10.0,     -10.0]  # Returns: Security Y \n",
+      "z = [            7.5,     7.5,       7.5]  # Returns: Security Z\n",
+      "\n",
+      "# Compute the mean of each security's returns\n",
+      "m_y = sum(p_i * y_i for p_i, y_i in zip(p, y)) \n",
+      "m_z = sum(p_i * z_i for p_i, z_i in zip(p, z))\n",
+      "\n",
+      "for i in [('Y',m_y), ('Z',m_z)]:\n",
+      "    print \"Portfolio %s: Mean=%05.2f\" % i \n",
+      "\n",
+      "# If risk is ignored, we should pick security with the highest expected return\n",
+      "if m_y == m_z:\n",
+      "    choice = 'Indifferent between Y & Z.'\n",
+      "elif m_y > m_x:\n",
+      "    choice = 'Security Y.'\n",
+      "else:\n",
+      "    choice = 'Security Z.'\n",
+      "\n",
+      "ans.add(choice)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Portfolio Y: Mean=07.50\n",
+        "Portfolio Z: Mean=07.50\n"
+       ]
+      },
+      {
        "metadata": {},
        "output_type": "pyout",
        "prompt_number": 3,
        "text": [
-        "'Missing'"
+        "'Indifferent between Y & Z.'"
        ]
       }
      ],
@@ -104,17 +133,52 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "ans.add('Missing')"
+      "# States:  Expansion,  Normal, Recession\n",
+      "p = [           0.40,    0.40,      0.20]  # State Probabilites \n",
+      "a = [           13.0,     9.0,       8.5]  # Returns: Portfolio A  \n",
+      "b = [           10.0,     9.0,       5.0]  # Returns: Portfolio B \n",
+      "c = [           13.0,     8.0,       7.5]  # Returns: Portfolio C \n",
+      "\n",
+      "# Compute the mean of each portfolio's returns\n",
+      "m_a = sum(p_i*a_i for p_i, a_i in zip(p, a))\n",
+      "m_b = sum(p_i*b_i for p_i, b_i in zip(p, b))\n",
+      "m_c = sum(p_i*c_i for p_i, c_i in zip(p, c))\n",
+      "\n",
+      "# Compute the variance of each security's returns\n",
+      "v_a = sum(p_i * (a_i-m_a)**2 for p_i, a_i in zip(p, a)) \n",
+      "v_b = sum(p_i * (b_i-m_b)**2 for p_i, b_i in zip(p, b))\n",
+      "v_c = sum(p_i * (c_i-m_c)**2 for p_i, c_i in zip(p, c))\n",
+      "\n",
+      "for i in [('A',m_a,v_a), ('B',m_b,v_b), ('C',m_c,v_c)]:\n",
+      "    print \"Portfolio %s: Mean=%05.2f, Variance=%04.2f\" % i \n",
+      "\n",
+      "if v_a < min(v_b, v_c):\n",
+      "    choice = 'A'\n",
+      "elif v_b < v_c:\n",
+      "    choice = 'B'\n",
+      "else:\n",
+      "    choice = 'C'\n",
+      "\n",
+      "ans.add('Portfolio %s.' % choice)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Portfolio A: Mean=10.50, Variance=4.20\n",
+        "Portfolio B: Mean=08.60, Variance=3.44\n",
+        "Portfolio C: Mean=09.90, Variance=6.44\n"
+       ]
+      },
+      {
        "metadata": {},
        "output_type": "pyout",
        "prompt_number": 4,
        "text": [
-        "'Missing'"
+        "'Portfolio B.'"
        ]
       }
      ],
@@ -134,7 +198,8 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "ans.add('Missing')"
+      "# Risk aversion implies that a higher risk demands a commensurate higher return \n",
+      "ans.add(True)"
      ],
      "language": "python",
      "metadata": {},
@@ -144,7 +209,7 @@
        "output_type": "pyout",
        "prompt_number": 5,
        "text": [
-        "'Missing'"
+        "True"
        ]
       }
      ],
@@ -164,7 +229,8 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "ans.add('Missing')"
+      "# By definition of covariance\n",
+      "ans.add('True')"
      ],
      "language": "python",
      "metadata": {},
@@ -174,7 +240,7 @@
        "output_type": "pyout",
        "prompt_number": 6,
        "text": [
-        "'Missing'"
+        "'True'"
        ]
       }
      ],
@@ -192,7 +258,32 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "ans.add('Missing')"
+      "from math import sqrt \n",
+      "\n",
+      "# The observations; variable: (X = smartphone, Y = sales)\n",
+      "obs = [ #  X,   Y\n",
+      "          (1, 120), # Anthony,  Smartphone Yes; Change in sales 120\n",
+      "          (0,  60), # Kira,     Smartphone  No; Change in Sales  60\n",
+      "          (0, 150), # Michael,  Smartphone  No; Change in Sales 150\n",
+      "          (1, 130), # Scarlett, Smartphone Yes; Change in Sales 130\n",
+      "          (1,  40), # Pete,     Smartphone Yes; Change in Sales  40\n",
+      "          (0,  60)] # Angela,   Smartphone  No; Change in Sales  60\n",
+      "\n",
+      "# Number of observations\n",
+      "n = float(len(obs)) \n",
+      "\n",
+      "# Mean of both variables \n",
+      "m_x = sum(x_i for x_i, _ in obs) / n\n",
+      "m_y = sum(y_i for _, y_i in obs) / n\n",
+      "\n",
+      "# Standard Deviation of both variable\n",
+      "v_x = sum((x_i - m_x)**2 for x_i, _ in obs) / (n-1); s_x = sqrt(v_x)\n",
+      "v_y = sum((y_i - m_y)**2 for _, y_i in obs) / (n-1); s_y = sqrt(v_y)\n",
+      "\n",
+      "# Correlation between the two variables\n",
+      "cor = sum(((x_i - m_x)/s_x) * ((y_i - m_y)/s_y) for x_i, y_i in obs) / (n-1)\n",
+      "\n",
+      "ans.add(round(cor, 2))"
      ],
      "language": "python",
      "metadata": {},
@@ -202,7 +293,7 @@
        "output_type": "pyout",
        "prompt_number": 7,
        "text": [
-        "'Missing'"
+        "0.08"
        ]
       }
      ],
@@ -223,7 +314,8 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "ans.add('Missing')"
+      "# Higher risk demands a high risk premium\n",
+      "ans.add('Higher.')"
      ],
      "language": "python",
      "metadata": {},
@@ -233,7 +325,7 @@
        "output_type": "pyout",
        "prompt_number": 8,
        "text": [
-        "'Missing'"
+        "'Higher.'"
        ]
       }
      ],
@@ -255,17 +347,55 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "ans.add('Missing')"
+      "# States:  Expansion,  Normal, Recession\n",
+      "p = [           0.40,    0.40,      0.20]  # State Probabilites \n",
+      "a = [           12.0,    10.0,       7.0]  # Returns: Security A \n",
+      "b = [           11.0,     9.0,       8.0]  # Returns: Security B \n",
+      "c = [           12.0,     8.0,       7.5]  # Returns: Security C \n",
+      "\n",
+      "# Compute the mean of each security's returns\n",
+      "m_a = sum(p_i*a_i for p_i, a_i in zip(p, a))\n",
+      "m_b = sum(p_i*b_i for p_i, b_i in zip(p, b))\n",
+      "m_c = sum(p_i*c_i for p_i, c_i in zip(p, c))\n",
+      "\n",
+      "# Compute the variance of each security's returns\n",
+      "v_a = sum(p_i * (a_i-m_a)**2 for p_i, a_i in zip(p, a)) \n",
+      "v_b = sum(p_i * (b_i-m_b)**2 for p_i, b_i in zip(p, b))\n",
+      "v_c = sum(p_i * (c_i-m_c)**2 for p_i, c_i in zip(p, c))\n",
+      "\n",
+      "for i in [('A',m_a,v_a), ('B',m_b,v_b), ('C',m_c,v_c)]:\n",
+      "    print \"Security %s: Mean=%05.2f, Variance=%04.2f\" % i \n",
+      "\n",
+      "# If a security has the lowest expected return and highest variance (i.e risk) then reject it.\n",
+      "if   m_a <= min(m_a, m_b, m_c) and v_a >= max(v_a, v_b, v_c):\n",
+      "    choice = 'Security A.'\n",
+      "elif m_b <= min(m_a, m_b, m_c) and v_b >= max(v_a, v_b, v_c):\n",
+      "    choice = 'Security B.'\n",
+      "elif m_c <= min(m_a, m_b, m_c) and v_c >= max(v_a, v_b, v_c):\n",
+      "    choice = 'Security C.'\n",
+      "else:\n",
+      "    choice = 'None of the securities.'\n",
+      "    \n",
+      "ans.add(choice)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Security A: Mean=10.20, Variance=3.36\n",
+        "Security B: Mean=09.60, Variance=1.44\n",
+        "Security C: Mean=09.50, Variance=4.20\n"
+       ]
+      },
+      {
        "metadata": {},
        "output_type": "pyout",
        "prompt_number": 9,
        "text": [
-        "'Missing'"
+        "'Security C.'"
        ]
       }
      ],
@@ -286,17 +416,39 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "ans.add('Missing')"
+      "# Alpha: Current Price, Weight, Next Year's Possible Returns\n",
+      "p0_a = 40\n",
+      "a = [round((p1 - p0_a)*100/p0_a,2) for p1 in [48.0, 44.0, 36.0]]\n",
+      "print 'Alpha Returns(%):', a\n",
+      "\n",
+      "# Gamma: Current Price, Weight, Next Year's Possible Returns\n",
+      "p0_c = 15\n",
+      "c = [round((p1 - p0_c)*100/p0_c,2) for p1 in [18.0, 16.5, 13.5]]\n",
+      "print 'Gamma Returns(%):', c\n",
+      "\n",
+      "# If the returns of Alpha and Gamma are the same (in each of the three \n",
+      "# possible future states) then the mean and variance of next year's\n",
+      "# returns will be unchanged by replacing some of Alpha with Gamma \n",
+      "# regardless of the probilities assigned for each of the three states.\n",
+      "ans.add('No.' if (a == c) else 'It depends.')"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Alpha Returns(%): [20.0, 10.0, -10.0]\n",
+        "Gamma Returns(%): [20.0, 10.0, -10.0]\n"
+       ]
+      },
+      {
        "metadata": {},
        "output_type": "pyout",
        "prompt_number": 10,
        "text": [
-        "'Missing'"
+        "'No.'"
        ]
       }
      ],
@@ -320,17 +472,79 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "ans.add('Missing')"
+      "loan = 1.0   # 100% of loan amount recovered\n",
+      "slvg = 0.4   # 40% of loan amount salvaged (default)\n",
+      "\n",
+      "# Returns: There are four possibilites for the returns \n",
+      "returns = [(loan + loan)/(2*loan), # 1. Loan1=OK      and Loan2=OK\n",
+      "           (loan + slvg)/(2*loan), # 2. Loan1=OK      and Loan2=Default\n",
+      "           (slvg + loan)/(2*loan), # 3. Loan1=Default and Loan2=OK\n",
+      "           (slvg + slvg)/(2*loan)] # 4. Loan1=Default and Loan2=Default\n",
+      "\n",
+      "# Banker 1\n",
+      "prob_df_1 = 0.06                   # Probability of a single mortgage default\n",
+      "prob_ok_1 = 1 - prob_df_1          # Probability of a single mortgage paying\n",
+      "outcome_1 = [prob_ok_1*prob_ok_1,  # 1. Loan1=OK      and Loan2=OK\n",
+      "             prob_ok_1*prob_df_1,  # 2. Loan1=OK      and Loan2=Default\n",
+      "             prob_df_1*prob_ok_1,  # 3. Loan1=Default and Loan2=OK\n",
+      "             prob_df_1*prob_df_1]  # 4. Loan1=Default and Loan2=Default\n",
+      "mean_1 = sum(p_i * r_i               for p_i, r_i in zip(outcome_1, returns))\n",
+      "var_1  = sum(p_i * (r_i - mean_1)**2 for p_i, r_i in zip(outcome_1, returns))\n",
+      "print 'Bank %d: Mean=%0.2f, Variance=%0.2f' % (1, mean_1, var_1)\n",
+      "\n",
+      "# Banker 2\n",
+      "prob_df_2 = 0.05                   # Probability of a single mortgage default\n",
+      "prob_ok_2 = 1 - prob_df_2          # Probability of a single mortgage paying\n",
+      "outcome_2 = [prob_ok_2,            # 1. Loan1=OK      and Loan2=OK\n",
+      "             0,                    # 2. Loan1=OK      and Loan2=Default\n",
+      "             0,                    # 3. Loan1=Default and Loan2=OK\n",
+      "             prob_df_2]            # 4. Loan1=Default and Loan2=Default\n",
+      "mean_2 = sum(p_i * r_i               for p_i, r_i in zip(outcome_2, returns))\n",
+      "var_2  = sum(p_i * (r_i - mean_2)**2 for p_i, r_i in zip(outcome_2, returns))\n",
+      "print 'Bank %d: Mean=%0.2f, Variance=%0.2f' % (2, mean_2, var_2)\n",
+      "\n",
+      "# Compare returns of Bank 1 and 2\n",
+      "if   (mean_1 > mean_2):\n",
+      "    if   (var_1 < var_2):\n",
+      "        choice = \"Banker 1's MBS has a higher expected return and less risk.\"\n",
+      "    elif (var_1 > var_2):\n",
+      "        choice = \"Banker 1's MBS has a higher expected return and more risk.\"\n",
+      "    else:\n",
+      "        choice = \"Banker 1's MBS has a higher expected return, but the risk is the same.\"\n",
+      "elif (mean_1 < mean_2):\n",
+      "    if   (var_1 < var_2):\n",
+      "        choice = \"Banker 2's MBS has a higher expected return and more risk.\"\n",
+      "    elif (var_1 > var_2):\n",
+      "        choice = \"Banker 2's MBS has a higher expected return and less risk.\"\n",
+      "    else:\n",
+      "        choice = \"Banker 2's MBS has a higher expected return, but the risk is the same.\"\n",
+      "else:\n",
+      "    if   (var_1 < var_2):\n",
+      "        choice = \"Banker 2's MBS has more risk, but the expected returns on both MBS are the same.\"\n",
+      "    elif (var_1 > var_2):\n",
+      "        choice = \"Banker 1's MBS has more risk, but the expected returns on both MBS are the same.\"\n",
+      "    else:\n",
+      "        choice = \"The expected return and risk on both MBS are the same.\"\n",
+      "\n",
+      "ans.add(choice)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Bank 1: Mean=0.96, Variance=0.01\n",
+        "Bank 2: Mean=0.97, Variance=0.02\n"
+       ]
+      },
+      {
        "metadata": {},
        "output_type": "pyout",
        "prompt_number": 11,
        "text": [
-        "'Missing'"
+        "\"Banker 2's MBS has a higher expected return and more risk.\""
        ]
       }
      ],
@@ -353,7 +567,8 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "ans.add('Missing')"
+      "# We want to add investments which a negative correlation\n",
+      "ans.add(False)"
      ],
      "language": "python",
      "metadata": {},
@@ -363,7 +578,7 @@
        "output_type": "pyout",
        "prompt_number": 12,
        "text": [
-        "'Missing'"
+        "False"
        ]
       }
      ],
@@ -382,17 +597,17 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        " 1. Missing\n",
-        " 2. Missing\n",
-        " 3. Missing\n",
-        " 4. Missing\n",
-        " 5. Missing\n",
-        " 6. Missing\n",
-        " 7. Missing\n",
-        " 8. Missing\n",
-        " 9. Missing\n",
-        "10. Missing\n",
-        "11. Missing\n"
+        " 1. Systematic/Market Risk.\n",
+        " 2. Indifferent between Y & Z.\n",
+        " 3. Portfolio B.\n",
+        " 4. True\n",
+        " 5. True\n",
+        " 6. 0.08\n",
+        " 7. Higher.\n",
+        " 8. Security C.\n",
+        " 9. No.\n",
+        "10. Banker 2's MBS has a higher expected return and more risk.\n",
+        "11. False\n"
        ]
       }
      ],
