--- a/hw5.ipynb
+++ b/hw5.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:b0dd147aadaade23adef14c5cb15cbae62ba59a6fd9a3c8eeef75cdce687cc20"
+  "signature": "sha256:84fe260515e30165b84e5f251927c4f484b0d87b3c811894a2aca0999ecd1004"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -380,6 +380,13 @@
       }
      ],
      "prompt_number": 11
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "## Answers"
+     ]
     },
     {
      "cell_type": "code",
