--- a/hw6.ipynb
+++ b/hw6.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:8dceaefb072d37ff9461e7bf23ae64d763f7f186a840ba52d2fb2a355e66f236"
+  "signature": "sha256:de6ce605dc5e688f680eaf2b5802ebe0b4d009f841d60b98cc0ae4b88550b83b"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -397,6 +397,13 @@
       }
      ],
      "prompt_number": 11
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "## Answers"
+     ]
     },
     {
      "cell_type": "code",
