--- a/hw7.ipynb
+++ b/hw7.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:fffacc06d968778b6b1e5ce0e89b8ec8ee9fa180095e4436e702f030ae4e00a2"
+  "signature": "sha256:aff5e7f40b074a3f89334c4f61668fbdf02dcd8b320ee663762543629c3c84ec"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -583,6 +583,13 @@
       }
      ],
      "prompt_number": 12
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "## Answers"
+     ]
     },
     {
      "cell_type": "code",
