--- a/hw8.ipynb
+++ b/hw8.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:cf9d0262de1d041385f1626ca08fb8916817ca42f29935590f32a60150d026fb"
+  "signature": "sha256:242d0d100038ed39cea1fa74a1f659f58d9292d81ff1c517a3797410f4ce0e49"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -466,6 +466,13 @@
       }
      ],
      "prompt_number": 15
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "## Answers"
+     ]
     },
     {
      "cell_type": "code",
