--- a/hw7.ipynb
+++ b/hw7.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:aff5e7f40b074a3f89334c4f61668fbdf02dcd8b320ee663762543629c3c84ec"
+  "signature": "sha256:eb84431ca8084cbd92fd8b2a4f3e0ce23305633a1dbdcc4381fab889e0d3562d"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -198,8 +198,8 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# Risk aversion implies that a higher risk demands a commensurate higher return \n",
-      "ans.add(True)"
+      "# Risk aversion implies that a higher risk demands a commensurate higher return which implies lower price \n",
+      "ans.add(False)"
      ],
      "language": "python",
      "metadata": {},
@@ -209,7 +209,7 @@
        "output_type": "pyout",
        "prompt_number": 5,
        "text": [
-        "True"
+        "False"
        ]
       }
      ],
@@ -607,7 +607,7 @@
         " 1. Systematic/Market Risk.\n",
         " 2. Indifferent between Y & Z.\n",
         " 3. Portfolio B.\n",
-        " 4. True\n",
+        " 4. False\n",
         " 5. True\n",
         " 6. 0.08\n",
         " 7. Higher.\n",
